# golembase-rust-sdk

./: Cargo.toml  crates.js  search-index.js  settings.html
.cursor/rules/: coding-guidelines.mdc
.github/workflows/: demo.yml
api/: Cargo.toml
api/src/: api.rs  main.rs
chainid-validation/: search-index.js
chainid-validation/golem_base_mock/: fn.invalid_param.html  sidebar-items.js
chainid-validation/golem_base_sdk/: fn.keccak256.html  struct.Address.html  struct.Signature.html
chainid-validation/golem_base_sdk_cli/: index.html  struct.Args.html
chainid-validation/golem_base_test_utils/: constant.TEST_TTL.html  fn.find_entry_creation_transaction.html
cli/: Cargo.toml  README.md
cli/src/: main.rs
demo/: Cargo.toml
demo/src/: main.rs
examples/: yagna_interaction.rs
fix-mock-get-metadata/: help.html  src-files.js
fix-mock-get-metadata/golem_base_mock/: index.html  struct.GolemBaseMock.html
fix-mock-get-metadata/golem_base_sdk_api/: sidebar-items.js
fix-mock-get-metadata/golem_base_test_utils/: all.html
golem-base-mock/: search-index.js  settings.html  src-files.js
golem-base-mock/golem_base_mock/: all.html  index.html  sidebar-items.js  struct.GolemBaseMock.html  struct.GolemBaseMockServer.html
golem_base_mock/: fn.create_error.html  index.html  macro.return_override!.html  macro.return_override.html  struct.GolemBaseMock.html
golem_base_mock/api/: index.html  (+3 more)
golem_base_sdk/: all.html  fn.keccak256.html  index.html  sidebar-items.js  struct.Signature.html  struct.Url.html  type.PrivateKeySigner.html
golem_base_sdk_api/: fn.main.html  index.html  struct.Cli.html
golem_base_sdk_cli/: all.html  enum.AccountCommand.html  enum.Command.html  fn.main.html  index.html  sidebar-items.js  struct.Args.html
golem_base_sdk_demo/: all.html  fn.log_num_of_entities_owned.html  fn.main.html  index.html
golem_base_test_utils/: constant.GOLEM_BASE_URL.html  constant.TEST_TTL.html  fn.cleanup_entities.html  fn.create_test_account.html  fn.find_entry_creation_transaction.html  index.html  sidebar-items.js
rebranding-to-arkiv/: crates.js  help.html  search-index.js  settings.html  src-files.js
resilient-rpc-calls/: crates.js  help.html  src-files.js
resilient-transaction-logic/: search-index.js
src/: account.rs  client.rs  entity.rs  eth.rs  events.rs  lib.rs  rpc.rs  signers.rs  utils.rs
test-transaction-logic/: help.html  search-index.js  src-files.js
test-utils/: Cargo.toml
test-utils/arkiv-mock/: Cargo.toml
test-utils/arkiv-mock/src/: api.rs  block.rs  block_builder.rs  blockchain.rs  controller.rs  display.rs  entity_db.rs  events.rs  execution.rs  lib.rs  managed_accounts.rs  query_parser.rs  server.rs  transaction_pool.rs
test-utils/arkiv-mock/tests/: test_golem_base_mock.rs  test_mock_rpc_api.rs
test-utils/golem-base-mock/: Cargo.toml
test-utils/golem-base-mock/src/: api.rs  entity_db.rs  lib.rs  query_parser.rs  server.rs
test-utils/golem-base-mock/tests/: test_golem_base_mock.rs  test_mock_rpc_api.rs
test-utils/src/: arkiv.rs  entity_set.rs  golembase.rs  lib.rs
tests/: test_accounts.rs  test_batch_operations.rs  test_custom_signer.rs  test_entity_operations.rs  test_events.rs  test_pagination.rs  test_query.rs  test_resilient_client.rs  test_rpc_api.rs  test_sdk.rs  test_transaction_logic.rs
wait-for-confirmations/: search-index.js  settings.html  src-files.js
(+794 files in other folders)
