[package]
name = "golem-base-sdk"
version = "0.1.0"
edition = "2021"
description = "A Rust SDK for interacting with GolemBase."
license = "GPLv3"

[workspace]
members = ["api", "cli", "demo", "test-utils", "test-utils/golem-base-mock"]
resolver = "2"

[dependencies]
alloy = { version = "0.15", features = ["full", "json-rpc"] }
alloy-json-rpc = "0.15"
alloy-rlp = "0.3"
alloy-signer-local = { version = "0.15", features = ["keystore"] }
anyhow = "1.0"
async-trait = "0.1"
bigdecimal = "0.4"
bon = "3.6"
bytes = "1.0"
derive_more = "2"
dirs = "5.0"
displaydoc = "0.2"
futures = "0.3"
hex = "0.4"
humantime = "2.2"
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
url = "2.4"

[workspace.dependencies]
golem-base-sdk = { path = "." }
golem-base-test-utils = { path = "test-utils" }
golem-base-mock = { path = "test-utils/golem-base-mock" }

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
serde_json = "1.0"
serial_test = "3.2"

golem-base-test-utils = { workspace = true }
golem-base-mock = { workspace = true }
