[package]
name = "arkiv-sdk-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
clap = { version = "4.2", features = ["derive"] }
dirs = "4.0"
env_logger = "0.10"
arkiv-sdk = { workspace = true }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
