[package]
name = "arkiv-sdk-cli"
version = "0.1.0"
edition = "2021"
authors = ["Arkiv Team"]
description = "CLI tool for interacting with Arkiv"

[dependencies]
anyhow = "1.0"
bigdecimal = "0.4"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
env_logger = "0.11"
arkiv-sdk = { workspace = true }
log = "0.4"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
url = "2.5"
